
* PR#311: sphinx-quickstart does not work on python 3.4.
* Fix :confval:`autodoc_docstring_signature` not working with signatures
  in class docstrings.
* Rebuilding cause crash unexpectedly when source files were added.
* #1607: Fix a crash when building latexpdf with "howto" class
* #1251: Fix again. Sections which depth are lower than :tocdepth: should not
  be shown on localtoc sidebar.


Release 1.3b1 (released Oct 10, 2014)
=====================================

Incompatible changes
--------------------

* Dropped support for Python 2.5, 3.1 and 3.2.
* Dropped support for docutils versions up to 0.9.
* Removed the ``sphinx.ext.oldcmarkup`` extension.
* The deprecated config values ``exclude_trees``, ``exclude_dirnames`` and
  ``unused_docs`` have been removed.
* A new node, ``sphinx.addnodes.literal_strong``, has been added, for text that
  should appear literally (i.e. no smart quotes) in strong font.  Custom writers
  will have to be adapted to handle this node.
* PR#269, #1476: replace ``<tt>`` tag by ``<code>``. User customized stylesheets
  should be updated If the css contain some styles for ``tt>`` tag.
  Thanks to Takeshi Komiya.
* #1543: `templates_path` is automatically added to
  `exclude_patterns` to avoid reading autosummary rst templates in the
  templates directory.
* Custom domains should implement the new `Domain.resolve_any_xref`
  method to make the `any` role work properly.
* gettext builder: gettext doesn't emit uuid information to generated pot files
  by default. Please set ``True`` to `gettext_uuid` to emit uuid information.
  Additionally, if the ``python-levenshtein`` 3rd-party package is installed,
  it will improve the calculation time.
* gettext builder: disable extracting/apply 'index' node by default. Please set
  'index' to :confval:`gettext_enables` to enable extracting index entries.
* PR#307: Add frame to code-block in LaTeX. Thanks to Takeshi Komiya.

Features added
--------------

* Add support for Python 3.4.